# kdx-pi-signage

./: .gitignore  README.md  config.py  kdx-pi-signage.service  logger.py  main.py  playlist_manager.py  pyproject.toml  video_player.py  video_scanner.py
.trae/documents/: INSTALL.md  arquitectura_tecnica_carteleria_pi.md  especificaciones_tecnicas_complementarias.md  requisitos_producto_carteleria_pi.md
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_full_system.py
tests/unit/: __init__.py  test_config.py  test_playlist_manager.py  test_signage_system.py  test_video_player.py  test_video_scanner.py
